fix nav bar adding z-index to it.

--- a/assest/style.css
+++ b/assest/style.css
@@ -61,6 +61,7 @@ ul > li  a {
 .about-me p {
   position: relative;
   margin: 5px;
+  margin-top: 50px;
 }
 
 .my-photo {
@@ -87,6 +88,7 @@ ul > li  a {
 .nav {
   display: flex;
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
   justify-content: end;  
@@ -175,10 +177,11 @@ ul > li  a {
 }
 
 .contact-items {
-  margin-top: 50px;
+  margin-top: 100px;
+  font-size: 1.7rem;
 }
 .contact-me {
-  height: 81vh;
+  height: 55vh;
 }
 .about-me h2, .work h2, .contact-me h2 {
   font-size: 3rem;
@@ -220,7 +223,7 @@ ul > li  a {
   }
 
   .contact-items {
-    margin-top: 25px;
+    margin-top: 50px;
     line-height: 5rem;
     letter-spacing: .1rem;
   } 
